[package]
name = "rtd"
description="Manage your todo in command line"
homepage="https://github.com/yutaodou/rtd"
repository="https://github.com/yutaodou/rtd"
version = "0.3.0"
authors = ["yutaodou@gmail.com"]
edition = "2018"
license = "Apache-2.0"
readme = "README.md"
keywords = ["task", "todo","command-line", "terminal", "cli"]
categories = ["command-line-utilities"]

[dependencies]
rusqlite = "0.21.0"
time = "0.2.9"
ansi_term = "0.12"
clap = "2.33.0"
dirs = "2.0.2"
anyhow = "1.0"
prettytable-rs = "^0.8"

[dependencies.migrant_lib]
version = "0.28.0"
features = ["d-sqlite"]

[features]
d-sqlite=[]